// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders 1`] = `
.emotion-3 {
  top: 0px;
  left: 0px;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0;
  z-index: 2;
}

.emotion-5 {
  position: relative;
}

.emotion-2 {
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2:after {
  position: absolute;
}

<Tooltip
  id="renders"
  trigger="trigger"
>
  <span
    aria-describedby="renders"
    data-cy="tooltip"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    tabIndex={0}
  >
    <Dropdownable
      dropdown={
        <TooltipContent
          id="renders"
          open={false}
        >
          content
        </TooltipContent>
      }
      onClose={[Function]}
      open={false}
      preferredDirections={
        Array [
          "top-center",
          "top-left",
          "top-right",
          "bottom-center",
          "bottom-left",
          "bottom-right",
        ]
      }
    >
      <Styled(div)>
        <div
          className="emotion-5"
        >
          <div>
            trigger
          </div>
          <Overlay
            className="emotion-3"
            overlayRoot={
              .emotion-3 {
  top: 0px;
  left: 0px;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0;
  z-index: 2;
}

.emotion-2 {
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2:after {
  position: absolute;
}

<body>
                <div>
                  <div
                    class="emotion-3"
                  >
                    <div>
                      <div
                        aria-hidden="true"
                        class="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                        data-cy="tooltipContent"
                        id="renders"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <Portal
              containerInfo={
                <div>
                  <div
                    class="emotion-3"
                  >
                    <div>
                      <div
                        aria-hidden="true"
                        class="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                        data-cy="tooltipContent"
                        id="renders"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
              }
            >
              <div
                className="emotion-3"
              >
                <div>
                  <clickOutside(DropdownContents)
                    onClose={[Function]}
                    open={false}
                  >
                    <DropdownContents
                      onClose={[Function]}
                      open={false}
                    >
                      <TooltipContent
                        direction="bottom-left"
                        id="renders"
                        open={false}
                      >
                        <div
                          aria-hidden={true}
                          className="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                          data-cy="tooltipContent"
                          id="renders"
                          role="tooltip"
                          style={
                            Object {
                              "maxWidth": undefined,
                              "minWidth": undefined,
                            }
                          }
                        >
                          content
                        </div>
                      </TooltipContent>
                    </DropdownContents>
                  </clickOutside(DropdownContents)>
                </div>
              </div>
            </Portal>
          </Overlay>
        </div>
      </Styled(div)>
    </Dropdownable>
  </span>
</Tooltip>
`;

exports[`Tooltip renders open tooltip 1`] = `
.emotion-5 {
  position: relative;
}

.emotion-2 {
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2:after {
  position: absolute;
}

.emotion-3 {
  top: 0px;
  left: 0px;
  position: absolute;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
  z-index: 2;
}

<Tooltip
  id="opened"
  open={true}
  trigger="trigger"
>
  <span
    aria-describedby="opened"
    data-cy="tooltip"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    tabIndex={0}
  >
    <Dropdownable
      dropdown={
        <TooltipContent
          id="opened"
          open={true}
        >
          content
        </TooltipContent>
      }
      onClose={[Function]}
      open={true}
      preferredDirections={
        Array [
          "top-center",
          "top-left",
          "top-right",
          "bottom-center",
          "bottom-left",
          "bottom-right",
        ]
      }
    >
      <Styled(div)>
        <div
          className="emotion-5"
        >
          <div>
            trigger
          </div>
          <Overlay
            className="emotion-3"
            overlayRoot={
              <body>
                <div>
                  <div
                    class="css-ao6agm"
                  >
                    <div>
                      <div
                        aria-hidden="true"
                        class="
    css-nu8exu
    emotion-1   inverseColorMode emotion-2"
                        data-cy="tooltipContent"
                        id="renders"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
                .emotion-2 {
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2:after {
  position: absolute;
}

.emotion-3 {
  top: 0px;
  left: 0px;
  position: absolute;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
  z-index: 2;
}

<div>
                  <div
                    class="emotion-3"
                  >
                    <div>
                      <div
                        aria-hidden="false"
                        class="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                        data-cy="tooltipContent"
                        id="opened"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <Portal
              containerInfo={
                <div>
                  <div
                    class="emotion-3"
                  >
                    <div>
                      <div
                        aria-hidden="false"
                        class="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                        data-cy="tooltipContent"
                        id="opened"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
              }
            >
              <div
                className="emotion-3"
              >
                <div>
                  <clickOutside(DropdownContents)
                    onClose={[Function]}
                    open={true}
                  >
                    <DropdownContents
                      onClose={[Function]}
                      open={true}
                    >
                      <TooltipContent
                        direction="top-left"
                        id="opened"
                        open={true}
                      >
                        <div
                          aria-hidden={false}
                          className="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                          data-cy="tooltipContent"
                          id="opened"
                          role="tooltip"
                          style={
                            Object {
                              "maxWidth": undefined,
                              "minWidth": undefined,
                            }
                          }
                        >
                          content
                        </div>
                      </TooltipContent>
                    </DropdownContents>
                  </clickOutside(DropdownContents)>
                </div>
              </div>
            </Portal>
          </Overlay>
        </div>
      </Styled(div)>
    </Dropdownable>
  </span>
</Tooltip>
`;

exports[`Tooltip renders with preferred directions 1`] = `
.emotion-5 {
  position: relative;
}

.emotion-2 {
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2:after {
  position: absolute;
}

.emotion-3 {
  top: 0px;
  left: 0px;
  position: absolute;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
  z-index: 2;
}

<Tooltip
  id="customDir"
  open={true}
  preferredDirections={
    Array [
      "bottom-left",
    ]
  }
  trigger="trigger"
>
  <span
    aria-describedby="customDir"
    data-cy="tooltip"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    tabIndex={0}
  >
    <Dropdownable
      dropdown={
        <TooltipContent
          id="customDir"
          open={true}
        >
          content
        </TooltipContent>
      }
      onClose={[Function]}
      open={true}
      preferredDirections={
        Array [
          "bottom-left",
        ]
      }
    >
      <Styled(div)>
        <div
          className="emotion-5"
        >
          <div>
            trigger
          </div>
          <Overlay
            className="emotion-3"
            overlayRoot={
              <body>
                <div>
                  <div
                    class="css-ao6agm"
                  >
                    <div>
                      <div
                        aria-hidden="true"
                        class="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                        data-cy="tooltipContent"
                        id="renders"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    class="emotion-3"
                  >
                    <div>
                      <div
                        aria-hidden="false"
                        class="
    css-10cr3um
    emotion-1   inverseColorMode emotion-2"
                        data-cy="tooltipContent"
                        id="opened"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
                .emotion-2 {
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2:after {
  position: absolute;
}

.emotion-3 {
  top: 0px;
  left: 0px;
  position: absolute;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
  z-index: 2;
}

<div>
                  <div
                    class="emotion-3"
                  >
                    <div>
                      <div
                        aria-hidden="false"
                        class="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                        data-cy="tooltipContent"
                        id="customDir"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <Portal
              containerInfo={
                <div>
                  <div
                    class="emotion-3"
                  >
                    <div>
                      <div
                        aria-hidden="false"
                        class="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                        data-cy="tooltipContent"
                        id="customDir"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
              }
            >
              <div
                className="emotion-3"
              >
                <div>
                  <clickOutside(DropdownContents)
                    onClose={[Function]}
                    open={true}
                  >
                    <DropdownContents
                      onClose={[Function]}
                      open={true}
                    >
                      <TooltipContent
                        direction="bottom-left"
                        id="customDir"
                        open={true}
                      >
                        <div
                          aria-hidden={false}
                          className="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                          data-cy="tooltipContent"
                          id="customDir"
                          role="tooltip"
                          style={
                            Object {
                              "maxWidth": undefined,
                              "minWidth": undefined,
                            }
                          }
                        >
                          content
                        </div>
                      </TooltipContent>
                    </DropdownContents>
                  </clickOutside(DropdownContents)>
                </div>
              </div>
            </Portal>
          </Overlay>
        </div>
      </Styled(div)>
    </Dropdownable>
  </span>
</Tooltip>
`;
